# claude-code-history-viewer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  archive.html  backlog-schema.toml  justfile  package.json  vite.archive.config.ts  vite.config.ts
.claude/commands/: check-relay.md
.config/: nextest.toml
.github/workflows/: archive-tests.yml  rust-tests.yml  server-release.yml  updater-release.yml
.playwright-cli/: page-2026-07-03T23-27-37-177Z.yml
.playwright-mcp/: page-2026-07-11T16-09-58-888Z.yml  page-2026-07-11T16-10-13-922Z.yml  page-2026-07-11T16-10-24-547Z.yml  page-2026-07-11T18-16-56-104Z.yml  page-2026-07-11T18-17-38-739Z.yml  page-2026-07-11T18-18-07-846Z.yml  page-2026-07-11T18-23-15-576Z.yml
.secondloop/: RUNBOOK.md  hooks.toml
.sqlx/: query-011f570f5f36f9eb394f3b5579475603af316d94ed824010b4bfe65f0fd0fb0a.json  query-0f7b533644d740539ca36f60f8e9211c1a625ec99e92fe8a4eacbc2b9a8a4953.json  query-1763134c7feb6035d95a41d2c5c5c3c8db9ff88f83d3c770b4dea1dd2ecf0de1.json  query-188e41a9649954956de9cb3e94f3a073301aa3a5d8ac8e47db7890c7565929d9.json  query-1dca6a7d641e05a62e9333643bbd2eb0921b4619af96bd7ae8e9684d4a3f03dd.json  query-36ca4e9648e4acc71e6f2f83b2e7304abb143db5599010954b064f6febc7b593.json  query-4795e8e1eb845606a0ade871e2a40716bd86ea7320ef6b0994a030ca7fa481a5.json  query-4cabf9d390fb305422e342289d7792753bbad3d2ca75429c238b340ffbfd0a3b.json  query-5dceda5baf62f2fcd6ec628076ef8ae3c8ebfed8901709fce7feb3772cd44f2e.json  query-6fa0493d387c0c6a14817b9699edf4fc68eb3fe52737359fe3e20aea5dc73982.json  query-7c28a0787943fb426b3748d17954e40639538a2d2c4d0fa8f3da52966c3f1e6f.json  query-7fee48e0f395e10055f90579e0c0b22f40d441c827edc117cc6741737bf102fd.json  query-89a96eeccea4a8cdf6da000ab1dd6b3521331b57059de0a3c2d0f07153231f6f.json  query-93afa8e3093dfb033a41aab39ea15c8a487550bd4507dd8bc1dfe7a2af01c022.json  query-93c546db867c900be1ea3a522419eea679439e6010c9b477c9698ef4019f6a86.json  query-9cebd1e5bf18be0ac282f3108b5442bb342199dd12ee8f9b744ee10cfbbe6924.json  query-9e3ad005c96d63df4e7983273ecf44c717490c164cf4e25e28299f884b6a40bc.json  query-a7eb7759bd070d7e83f42cc7386c58557f4aee21fce856592a2494160d93d4b6.json  query-b1635128d93035d233c019c87bdbe84728056be10eced2737e9ba1d6525cda7b.json  query-d6b268fd758d87657e72aa247a8d11ab9aafda8f8531607b003283d5322eb68c.json  query-eebc81208244072c9666907df29c472d26e9a0e945e1a27a2e72fd64b377147c.json  query-f83970ea2d0cbae6ae2cd611daa4a4c4b010e55c75ed2c68fba595990221d5b2.json
agent-relay/: AGENTS.md
agent-relay/archive/: 2026-07-03-1708-second-loop-to-claude-code-history-viewer-all-5-hardening-fixes-shipped.md  2026-07-03-2116-home-network-to-claude-code-history-viewer-archive-use-pg1-not-own-postgres.md  2026-07-03-2210-home-network-to-claude-code-history-viewer-cchv-provisioned-on-pg1.md  2026-07-03-2303-home-network-to-claude-code-history-viewer-sync-daemon-dead-on-m4m.md  2026-07-04-0101-second-loop-to-claude-code-history-viewer-loop-run-ingest-freshness-failed.md  2026-07-04-0132-second-loop-to-claude-code-history-viewer-loop-run-ingest-freshness-failed.md  2026-07-04-1653-second-loop-to-claude-code-history-viewer-loop-run-daemon-ingest-timeout-failed.md  2026-07-04-1858-home-network-to-claude-code-history-viewer-gatus-ingest-check-live.md  2026-07-04-1916-second-loop-to-claude-code-history-viewer-judge-crash-fixed-v2.4.md  2026-07-05-1156-home-network-to-claude-code-history-viewer-openbao-agent-reads.md  2026-07-05-1416-home-network-to-claude-code-history-viewer-secrets-standard-flipped.md  2026-07-05-1714-second-loop-to-claude-code-history-viewer-loop-run-archive-viewer-ui-needs-human.md  2026-07-05-2208-home-network-to-claude-code-history-viewer-openbao-seeded.md  2026-07-06-0336-home-network-to-claude-code-history-viewer-migrate-global-check-relay.md  2026-07-06-0432-home-network-to-claude-code-history-viewer-hub-static-live.md  2026-07-08-0945-macos-setup-to-cchv-op-prompt-storm-launchd.md  (+13 more)
crates/history-core/: Cargo.toml
crates/history-core/src/: antigravity.rs  export.rs  lib.rs  models.rs  search_text.rs
crates/history-core/src/models/: message.rs  metadata.rs  rename.rs
crates/history-core/src/providers/: aider.rs  antigravity.rs  claude.rs  codex.rs  crush.rs  forgecode.rs  mod.rs  opencode.rs  pi.rs
crates/history-core/tests/: pi-importer.eval.test.tsx  pi-importer_eval.rs  stability_test.rs
crates/hub/: Cargo.toml
crates/hub/src/: auth.rs  browse.rs  config.rs  embed.rs  embed_sweep.rs  error.rs  fts.rs  health.rs  identities.rs  identity_filter.rs  ingest.rs  journal.rs  lib.rs  main.rs  pagination.rs  search.rs  state.rs
crates/hub/tests/: embed_sweep_test.rs  identity_auth_test.rs  identity_read_test.rs  ingest_test.rs  migration_test.rs  read_test.rs  search_mode_test.rs  static_test.rs
crates/loop-evals/: Cargo.toml
crates/loop-evals/src/: lib.rs
crates/loop-evals/tests/: archive-viewer-ui.eval.test.tsx  archive-viewer-ui_eval.rs  daemon-file-watcher_eval.rs  daemon-ingest-timeout_eval.rs  ingest-freshness_eval.rs  journal-entries_eval.rs  journal-webapp-ui.eval.test.tsx
crates/protocol/: Cargo.toml
crates/protocol/src/: identity.rs  lib.rs
crates/sync-daemon/: Cargo.toml
crates/sync-daemon/src/: checkpoint.rs  client.rs  config.rs  convert.rs  fs_atomic.rs  git_fingerprint.rs  identity.rs  lib.rs  main.rs  sync.rs  watcher.rs
crates/sync-daemon/tests/: e2e_test.rs  sync_test.rs
migrations/: 0001_initial_schema.sql  0002_journal_entries.sql  0003_project_identity.sql  0004_journal_embeddings.sql
scripts/: cchv-distill.py  cchv-launch.sh  dev.cchv.distiller.plist  sync-version.cjs  tm-backfill.sh
specs/: archive-viewer-ui.md  daemon-file-watcher.md  daemon-ingest-timeout.md  ingest-freshness.md  journal-entries.md  journal-webapp-ui.md  pi-importer.md
src/: archive-main.tsx  index.css  scrollbar.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: antigravity.rs  fs_utils.rs  multi_provider.rs  project.rs  stats.rs
src-tauri/src/commands/session/: load.rs  mod.rs  rename.rs
(+203 files in other folders)
