[workspace]
resolver = "2"
members = ["src-tauri", "crates/history-core"]

# ---------------------------------------------------------------------------
# Shared lint configuration. Both the desktop app and the extracted
# `history-core` library inherit these via `[lints] workspace = true`, so the
# pedantic profile that the parsers were written against is preserved after the
# extraction. (Moved verbatim from src-tauri/Cargo.toml.)
# ---------------------------------------------------------------------------
[workspace.lints.rust]
# "deny" (not "forbid") to allow selective #[allow(unsafe_code)] for mmap perf.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# nursery lints are too unstable - enable selectively if needed
# Allow certain lints that are too strict for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
# These are valid patterns in this codebase
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
# Allow casting in numeric code (common in size/count calculations)
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
# Allow reasonable patterns
items_after_statements = "allow"
needless_pass_by_value = "allow"
unreadable_literal = "allow"
manual_let_else = "allow"
field_reassign_with_default = "allow"
manual_clamp = "allow"
map_unwrap_or = "allow"
ptr_arg = "allow"
format_push_string = "allow"
duplicated_attributes = "allow"
return_self_not_must_use = "allow"

# ---------------------------------------------------------------------------
# Profiles must be declared at the workspace root (cargo ignores profiles in
# member crates). Moved verbatim from src-tauri/Cargo.toml.
# ---------------------------------------------------------------------------
[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies in dev mode (simd-json, rayon need optimization)
[profile.dev.package."*"]
opt-level = 2

[profile.test]
opt-level = 1 # Faster test execution
debug = true

# Profile for release builds with debug symbols (for coverage)
[profile.coverage]
inherits = "test"
debug = true
opt-level = 0
