[package]
name = "claude-code-history-viewer"
version = "1.18.0"
description = "Claude Code 대화 기록을 탐색하고 분석하는 데스크톱 애플리케이션"
authors = ["JaeHyeok Lee"]
license = "MIT"
repository = "https://github.com/jhlee0409/claude-code-history-viewer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "claude_code_history_viewer_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = []
webui-server = ["dep:axum", "dep:tower-http", "dep:tower", "dep:tokio", "dep:tokio-stream", "dep:rust-embed", "dep:mime_guess", "dep:argon2"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# Tauri-free extraction/parse library shared with the sync daemon.
history-core = { path = "../crates/history-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-opener = "2.5.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-single-instance = "2.4.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
rayon = "1.10"
memmap2 = "0.9"
simd-json = "0.14"
memchr = "2.7"
aho-corasick = "1.1"
lru = "0.16"
anyhow = "1.0"
base64 = "0.22"
urlencoding = "2.1"
tempfile = "3.24.0"
trash = "5.2"
regex = "1.11"
lazy_static = "1.5"
once_cell = "1.19"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = { version = "7.0", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

# WebUI server mode (optional)
argon2 = { version = "0.5", optional = true }
axum = { version = "0.8", optional = true, features = ["json", "query", "tokio"] }
tower-http = { version = "0.6", optional = true, features = ["cors", "fs", "trace"] }
tower = { version = "0.5", optional = true, features = ["util"] }
tokio = { version = "1.0", optional = true, features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
comrak = { version = "0.49.0", default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
# Core testing utilities
tempfile = "3.24.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing (QuickCheck-style)
proptest = "1.4"

# Parameterized tests & fixtures
rstest = "0.18"

# Snapshot testing
insta = { version = "1.34", features = ["json", "redactions"] }

# Mocking framework
mockall = "0.12"

# Test assertions with better error messages
pretty_assertions = "1.4"
assert_matches = "1.5"

# Fake data generation
fake = { version = "2.9", features = ["derive"] }

# Test utilities
test-case = "3.3"
once_cell = "1.19"
serial_test = "3.2"

# Async testing utilities
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"

[[bench]]
name = "performance"
harness = false

# Profiles and lint configuration moved to the workspace root Cargo.toml
# (cargo ignores profiles in non-root members; lints are shared via
# `[workspace.lints]` so history-core inherits the same pedantic profile).
[lints]
workspace = true
