[package]
name = "history-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
description = "Tauri-free extraction and normalization of AI coding-agent conversation history"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
rayon = "1.10"
memmap2 = "0.9"
simd-json = "0.14"
memchr = "2.7"
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"
dirs = "5.0"
base64 = "0.22"
comrak = { version = "0.49.0", default-features = false }
once_cell = "1.19"
log = "0.4"

[dev-dependencies]
insta = { version = "1.34", features = ["json", "redactions"] }
pretty_assertions = "1.4"
serial_test = "3.2"
tempfile = "3.24.0"
