[package]
name = "loop-evals"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
publish = false
description = "Test-only umbrella crate: second-loop T2 evals live in tests/ and may exercise any workspace crate (hub, history-core, sync-daemon, protocol)"

[lints]
workspace = true

[dev-dependencies]
hub = { path = "../hub" }
history-core = { path = "../history-core" }
sync-daemon = { path = "../sync-daemon" }
archive-protocol = { path = "../protocol" }
serial_test = "3.2"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.24.0"
anyhow = "1.0"
toml = "0.8"
