[package]
name = "archive-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
description = "Wire contract (ingest batches/responses) shared by the sync daemon and the hub"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }
