[package]
name = "sync-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
description = "Per-machine daemon that backfills and incrementally pushes local agent history to the hub"

[lints]
workspace = true

[dependencies]
history-core = { path = "../history-core" }
archive-protocol = { path = "../protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
gethostname = "0.5"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
serial_test = "3.2"
# e2e test: drive the real hub against Postgres.
hub = { path = "../hub" }
axum = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
] }
